WIP: fixing layout problem.

--- a/src/tailwind.pcss
+++ b/src/tailwind.pcss
@@ -47,3 +47,8 @@ h3 {
 .text-shadow {
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
 }
+
+.full-height {
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
+}
